--- a/cmd/tools/Makefile.am
+++ b/cmd/tools/Makefile.am
@@ -11,7 +11,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/sparse \
 	-I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/common \
-	-I$(top_srcdir)/lib/ingraphs @EXPAT_INCLUDES@
+	@EXPAT_INCLUDES@
 
 pdfdir = $(pkgdatadir)/doc/pdf
 
