fix failure to link gvpr with debug enabled
When using `CFLAGS=-DDEBUG CXXFLAGS=-DDEBUG ./configure --enable-debug`, gvpr
would fail to link due to missing libraries. Fixes #1807.

--- a/cmd/gvpr/Makefile.am
+++ b/cmd/gvpr/Makefile.am
@@ -28,7 +28,9 @@ pdf_DATA = gvpr.1.pdf
 
 gvpr_SOURCES = gvprmain.c
 gvpr_CPPFLAGS = $(AM_CPPFLAGS)
-gvpr_LDADD = $(top_builddir)/lib/gvpr/libgvpr.la
+gvpr_LDADD = $(top_builddir)/lib/gvpr/libgvpr.la \
+	$(top_builddir)/lib/cgraph/libcgraph.la \
+	$(top_builddir)/lib/cdt/libcdt.la
 
 gvpr.1.pdf: gvpr.1.ps
 	@PS2PDF@ $< $@
