remove lib/sparse from include paths

--- a/lib/circogen/CMakeLists.txt
+++ b/lib/circogen/CMakeLists.txt
@@ -31,5 +31,4 @@ target_include_directories(circogen PRIVATE
     ${GRAPHVIZ_LIB_DIR}/common
     ${GRAPHVIZ_LIB_DIR}/gvc
     ${GRAPHVIZ_LIB_DIR}/pack
-    ${GRAPHVIZ_LIB_DIR}/pathplan
-    ${GRAPHVIZ_LIB_DIR}/sparse)
+    ${GRAPHVIZ_LIB_DIR}/pathplan)
