suppress warnings from using Bison extensions in lib/expr/exparse.y
This is the equivalent of 8c099fc032074a0bb5961d67ef4df05ddca7eba4 but for a
different parser. Surprisingly exparse.y was already using Bison extensions, so
this actually suppresses two warnings:

  bison -y -dtv ../../lib/expr/exparse.y
  ../../lib/expr/exparse.y:131.1-7: warning: POSIX Yacc does not support %binary [-Wyacc]
   %binary       <op>    EQ      NE
   ^~~~~~~
  ../../lib/expr/exparse.y:132.1-7: warning: POSIX Yacc does not support %binary [-Wyacc]
   %binary       <op>    '<'     '>'     LE      GE
   ^~~~~~~

Related to #1806.

--- a/lib/expr/expr.vcxproj
+++ b/lib/expr/expr.vcxproj
@@ -64,7 +64,7 @@
     </ClCompile>
     <Lib />
     <PreBuildEvent>
-      <Command>win_bison -dy exparse.y -o exparse-intermediate.c
+      <Command>win_bison -Wno-yacc -dy exparse.y -o exparse-intermediate.c
 sed "s/yy/ex/g" &lt; exparse-intermediate.c | sed "s/YY/EX/g" &gt; exparse.c
 sed "s/yy/ex/g" &lt; exparse-intermediate.h | sed "s/YY/EX/g" &gt; exparse.h
 del exparse-intermediate.c
@@ -82,7 +82,7 @@ del exparse-intermediate.h</Command>
     </ClCompile>
     <Lib />
     <PreBuildEvent>
-      <Command>win_bison -dy exparse.y -o exparse-intermediate.c
+      <Command>win_bison -Wno-yacc -dy exparse.y -o exparse-intermediate.c
 sed "s/yy/ex/g" &lt; exparse-intermediate.c | sed "s/YY/EX/g" &gt; exparse.c
 sed "s/yy/ex/g" &lt; exparse-intermediate.h | sed "s/YY/EX/g" &gt; exparse.h
 del exparse-intermediate.c
