use Bison's api.prefix instead of name mangling in expr
This is the equivalent of cc2cb52756f545d6863d6fd801fa23762a81704c. My original
intent was to split the changes that remove the build-time symbol mangling (the
equivalent of 9240da12ab7857975aa34279520f1f6aad113d48) into a separate commit.
However, the expression parser does a lot of messy tricks to collide with and
suppress Bison-generated macros. It was simpler to undo all of this in one go
then try to thread this convoluted needle. Related to #1806.

--- a/lib/expr/expr.vcxproj
+++ b/lib/expr/expr.vcxproj
@@ -65,8 +65,8 @@
     <Lib />
     <PreBuildEvent>
       <Command>win_bison -Wno-yacc -dy exparse.y -o exparse-intermediate.c
-sed "s/yy/ex/g" &lt; exparse-intermediate.c | sed "s/YY/EX/g" &gt; exparse.c
-sed "s/yy/ex/g" &lt; exparse-intermediate.h | sed "s/YY/EX/g" &gt; exparse.h
+copy exparse-intermediate.c exparse.c
+copy exparse-intermediate.h exparse.h
 del exparse-intermediate.c
 del exparse-intermediate.h</Command>
     </PreBuildEvent>
@@ -83,8 +83,8 @@ del exparse-intermediate.h</Command>
     <Lib />
     <PreBuildEvent>
       <Command>win_bison -Wno-yacc -dy exparse.y -o exparse-intermediate.c
-sed "s/yy/ex/g" &lt; exparse-intermediate.c | sed "s/YY/EX/g" &gt; exparse.c
-sed "s/yy/ex/g" &lt; exparse-intermediate.h | sed "s/YY/EX/g" &gt; exparse.h
+copy exparse-intermediate.c exparse.c
+copy exparse-intermediate.h exparse.h
 del exparse-intermediate.c
 del exparse-intermediate.h</Command>
     </PreBuildEvent>
