explicitly name output of lib/expr/exparse.y rule
This has no effect right now, but an upcoming change modifies api.prefix which,
without this, would alter the name of the generated parser. Related to #1806.

--- a/lib/expr/Makefile.am
+++ b/lib/expr/Makefile.am
@@ -67,7 +67,7 @@ exparse.h: y.tab.h
 y.tab.c y.tab.h: y.output
 
 y.output: $(top_srcdir)/lib/expr/exparse.y
-	@YACC@ -Wno-yacc -dtv $(top_srcdir)/lib/expr/exparse.y
+	@YACC@ -Wno-yacc -dtv $(top_srcdir)/lib/expr/exparse.y -o y.tab.c
 
 expr.3.pdf: expr.3.ps
 	@PS2PDF@ $< $@
