remove unnecessary intermediate build artifact
This is the equivalent of c498c4bb3e12e48e3bab9aba8d3162535e163c92 for
exparse.y. Related to #1806.

--- a/lib/expr/expr.vcxproj
+++ b/lib/expr/expr.vcxproj
@@ -64,11 +64,7 @@
     </ClCompile>
     <Lib />
     <PreBuildEvent>
-      <Command>win_bison -Wno-yacc -dy exparse.y -o exparse-intermediate.c
-copy exparse-intermediate.c exparse.c
-copy exparse-intermediate.h exparse.h
-del exparse-intermediate.c
-del exparse-intermediate.h</Command>
+      <Command>win_bison -Wno-yacc -dy exparse.y -o exparse.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -82,11 +78,7 @@ del exparse-intermediate.h</Command>
     </ClCompile>
     <Lib />
     <PreBuildEvent>
-      <Command>win_bison -Wno-yacc -dy exparse.y -o exparse-intermediate.c
-copy exparse-intermediate.c exparse.c
-copy exparse-intermediate.h exparse.h
-del exparse-intermediate.c
-del exparse-intermediate.h</Command>
+      <Command>win_bison -Wno-yacc -dy exparse.y -o exparse.c</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
