--- a/lib/cgraph/cgraph.vcxproj
+++ b/lib/cgraph/cgraph.vcxproj
@@ -70,7 +70,7 @@
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PreBuildEvent>
-      <Command>win_bison -Wno-yacc -dy grammar.y -o grammar.c
+      <Command>win_bison -dy -Wno-yacc grammar.y -o grammar.c
 win_flex -oscan.c scan.l</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -93,7 +93,7 @@ win_flex -oscan.c scan.l</Command>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
     <PreBuildEvent>
-      <Command>win_bison -Wno-yacc -dy grammar.y -o grammar.c
+      <Command>win_bison -dy -Wno-yacc grammar.y -o grammar.c
 win_flex -oscan.c scan.l</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
