suppress Bison warnings from using non-Yacc compatible extensions in HTML parser
We do not actually use any of these yet, but we are about to. Related to #1806.

--- a/lib/common/Makefile.am
+++ b/lib/common/Makefile.am
@@ -68,7 +68,7 @@ htmlparse.h: y.tab.h
 y.tab.c y.tab.h: y.output
 
 y.output: $(top_srcdir)/lib/common/htmlparse.y
-	@YACC@ -dv $(top_srcdir)/lib/common/htmlparse.y
+	@YACC@ -Wno-yacc -dv $(top_srcdir)/lib/common/htmlparse.y
 
 DISTCLEANFILES = brewer_lib color_lib colortbl.h ps_font_equiv.h \
 	y.output y.tab.[ch] htmlparse.[ch]
