--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -159,7 +159,6 @@ portable-source:
     script:
         - ci/install-packages.sh
         - export GV_VERSION=$( cat VERSION )
-        - export build_system="autotools"
         - python3 -m pytest --junitxml=report.xml tests rtest
     artifacts:
         reports:
@@ -319,6 +318,8 @@ meta-data:
 
 ubuntu18-04-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -328,8 +329,24 @@ ubuntu18-04-test:
         - linux
     image: "graphviz/graphviz:ubuntu-18.04"
 
+ubuntu18-04-cmake-test:
+    <<: *test_definition
+    before_script:
+        - export build_system="cmake"
+        - echo experimental > COLLECTION
+    needs:
+        - job: portable-source
+          artifacts: true
+        - job: "ubuntu18-04-cmake-build"
+          artifacts: true
+    tags:
+        - linux
+    image: "graphviz/graphviz:ubuntu-18.04"
+
 ubuntu19-10-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -341,6 +358,8 @@ ubuntu19-10-test:
 
 ubuntu20-04-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -352,6 +371,8 @@ ubuntu20-04-test:
 
 centos6-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -363,6 +384,8 @@ centos6-test:
 
 centos7-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -374,6 +397,8 @@ centos7-test:
 
 centos8-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -385,6 +410,8 @@ centos8-test:
 
 fedora29-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -396,6 +423,8 @@ fedora29-test:
 
 fedora30-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -407,6 +436,8 @@ fedora30-test:
 
 fedora31-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -418,6 +449,8 @@ fedora31-test:
 
 fedora32-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
@@ -429,6 +462,8 @@ fedora32-test:
 
 fedora33-test:
     <<: *test_definition
+    before_script:
+        - export build_system="autotools"
     needs:
         - job: portable-source
           artifacts: true
