--- a/lib/sfio/Makefile.am
+++ b/lib/sfio/Makefile.am
@@ -12,7 +12,7 @@ libsfio_C_la_SOURCES = sfclose.c sfclrlock.c sfcvt.c sfdisc.c \
 	sfdlen.c sfexcept.c sfexit.c sfextern.c sffilbuf.c \
 	sfflsbuf.c sfgetd.c sfgetl.c sfgetm.c sfgetr.c sfgetu.c \
 	sfllen.c sfmode.c sfnew.c sfnotify.c \
-	sfnputc.c sfopen.c sfpkrd.c sfpoll.c sfpool.c sfpopen.c \
+	sfnputc.c sfopen.c sfpkrd.c sfpoll.c sfpool.c \
 	sfprintf.c sfprints.c sfpurge.c sfputd.c sfputl.c sfputm.c \
 	sfputr.c sfputu.c sfraise.c sfrd.c sfread.c sfreserve.c \
 	sfresize.c sfscanf.c sfseek.c sfset.c sfsetbuf.c sfsetfd.c \
