Add install of plugin configuration file config6 for CMake builds

--- a/cmd/dot/CMakeLists.txt
+++ b/cmd/dot/CMakeLists.txt
@@ -34,3 +34,7 @@ install(
     FILES dot.1 osage.1 patchwork.1
     DESTINATION ${MAN_INSTALL_DIR}
 )
+
+install(
+      SCRIPT ${TOP_SOURCE_DIR}/cmake/configure_plugins.cmake
+)
