Add generation of a Debian package from Ubuntu CMake build
Also adapts jobs & scripts.

This does not yet replicate the structure of Debian packages produced
by autotools. Everything is put into one single package named
Graphviz-<version>-Linux.deb.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -251,14 +251,9 @@ ubuntu20-04-build:
     image: "graphviz/graphviz:ubuntu-20.04"
 
 ubuntu18-04-cmake-build:
-    stage: build
-    script:
-        - mkdir build
-        - cd build
-        - cmake ..
-        - cmake --build .
-    except:
-        - tags
+    <<: *deb_build_definition
+    before_script:
+        - export build_system="cmake"
     tags:
         - linux
     image: "graphviz/graphviz:ubuntu-18.04"
