Fix lib/pack objs not included in lib/gvc dynamic lib for CMake builds
This is what the autotools builds do.

For some reason this was not a problem on Windows.

Without this, the rtest/test_examples.py gave errors like this for neatopack.c:

neatopack.c:(.text+0x81): undefined reference to `ccomps'

--- a/lib/gvc/CMakeLists.txt
+++ b/lib/gvc/CMakeLists.txt
@@ -51,13 +51,13 @@ target_include_directories(gvc PRIVATE
 
 target_link_libraries(gvc PRIVATE
     $<TARGET_OBJECTS:common_obj>
+    $<TARGET_OBJECTS:pack_obj>
 )
 
 target_link_libraries(gvc PUBLIC
     cdt
     cgraph
     label
-    pack
     pathplan
     xdot
     ${EXPAT_LIBRARIES}
