--- a/lib/pack/CMakeLists.txt
+++ b/lib/pack/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DGVC_EXPORTS)
 
-add_library(pack STATIC
+add_library(pack_obj OBJECT
     # Header files
     pack.h
 
@@ -9,7 +9,7 @@ add_library(pack STATIC
     pack.c
 )
 
-target_include_directories(pack PRIVATE
+target_include_directories(pack_obj PRIVATE
     ${GRAPHVIZ_LIB_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${GRAPHVIZ_LIB_DIR}/cdt
@@ -18,6 +18,10 @@ target_include_directories(pack PRIVATE
     ${GRAPHVIZ_LIB_DIR}/gvc
     ${GRAPHVIZ_LIB_DIR}/neatogen
     ${GRAPHVIZ_LIB_DIR}/pathplan
+)
+
+add_library(pack STATIC
+    $<TARGET_OBJECTS:pack_obj>
 )
 
 # Specify headers to be installed
